--- a/app/src/main/res/layout/fragment_store_front.xml
+++ b/app/src/main/res/layout/fragment_store_front.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".presentation.fragment.StoreFront">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="store" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
