--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -14,5 +14,14 @@
         android:id="@+id/backEnd"
         android:name="com.breckneck.funboxtest.presentation.fragment.BackEnd"
         android:label="fragment_back_end"
-        tools:layout="@layout/fragment_back_end" />
+        tools:layout="@layout/fragment_back_end" >
+        <action
+            android:id="@+id/action_backEnd_to_addItem"
+            app:destination="@id/addItem" />
+    </fragment>
+    <fragment
+        android:id="@+id/addItem"
+        android:name="com.breckneck.funboxtest.presentation.fragment.AddItem"
+        android:label="fragment_add_item"
+        tools:layout="@layout/fragment_add_item" />
 </navigation>
