--- a/app/src/main/res/layout/item_view_pager.xml
+++ b/app/src/main/res/layout/item_view_pager.xml
@@ -19,8 +19,8 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:text="ITEM"
-            android:textSize="40sp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="40sp" />
 
         <TextView
             android:layout_width="match_parent"
