almost did 1 task

--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -20,24 +20,26 @@
                 android:id="@+id/cancelButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="12dp"
+                android:backgroundTint="@color/gray"
                 android:text="@string/cancel"
-                android:textColor="@color/black"
-                android:backgroundTint="@color/gray"/>
+                android:textColor="@color/black" />
 
             <Button
                 android:id="@+id/saveButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_margin="12dp"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginBottom="12dp"
+                android:backgroundTint="@color/gray"
                 android:text="@string/save"
-                android:textColor="@color/black"
-                android:backgroundTint="@color/gray"/>
+                android:textColor="@color/black" />
 
         </RelativeLayout>
 
@@ -55,11 +57,14 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
                     android:text="@string/name"
                     android:textColor="@color/black"
-                    android:textSize="30sp"
-                    android:layout_centerVertical="true"
-                    android:layout_margin="16dp"/>
+                    android:textSize="30sp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -78,10 +83,13 @@
                     android:id="@+id/itemNameEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textSize="30sp"
                     android:layout_centerVertical="true"
-                    android:layout_margin="16dp"/>
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:textColor="@color/black"
+                    android:textSize="30sp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -122,10 +130,14 @@
                     android:id="@+id/itemPriceEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
                     android:textColor="@color/black"
                     android:textSize="30sp"
-                    android:layout_centerVertical="true"
-                    android:layout_margin="16dp"/>
+                    android:inputType="numberDecimal"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -166,10 +178,14 @@
                     android:id="@+id/itemQuantityEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
                     android:textColor="@color/black"
                     android:textSize="30sp"
-                    android:layout_centerVertical="true"
-                    android:layout_margin="16dp"/>
+                    android:inputType="number"/>
 
                 <TextView
                     android:layout_width="match_parent"
