--- a/app/src/main/res/layout/fragment_back_end.xml
+++ b/app/src/main/res/layout/fragment_back_end.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.fragment.BackEnd">
 
     <RelativeLayout
@@ -30,7 +31,8 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/backend_action_bar" />
+            android:layout_below="@id/backend_action_bar"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
     </RelativeLayout>
 
