--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -23,5 +23,13 @@
         android:id="@+id/addItem"
         android:name="com.breckneck.funboxtest.presentation.fragment.AddItem"
         android:label="fragment_add_item"
-        tools:layout="@layout/fragment_add_item" />
+        tools:layout="@layout/fragment_add_item" >
+        <action
+            android:id="@+id/action_addItem_to_backEnd"
+            app:destination="@id/backEnd" />
+        <argument
+            android:name="itemId"
+            app:argType="integer"
+            android:defaultValue="-1" />
+    </fragment>
 </navigation>
